# 2DConvexHull

./: CMakeLists.txt  README.md
include/: ConvexHull.h  Shape.h
src/: ConvexHull.cpp  Shape.cpp  main.cpp
test/: UnitTest.cpp
